added: Support dynamic PID switching of DVB-TS stream inside VNSI server added: Support for EAC3 and AAC to VNSI server (untested) fixed: Code cleanups inside VNSI server
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@30781 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/pvrclients/vdr-vnsi/vdr-plugin-vnsiserver/README
+++ b/xbmc/pvrclients/vdr-vnsi/vdr-plugin-vnsiserver/README
@@ -15,6 +15,13 @@ See the file COPYING for more information.
 Description:
 
 
+VNSI support also dynamic PID switching of the received DVB-TS stream. Further it detect and demuxing several
+not by VDR implemented Audio Streams, this are:
+- Enhanced AC3 (not tested)
+- Advanced Audio Coding (AAC) (not tested)
+- DTS (demuxer not finished now, and does not work)
+
+
 CHANNEL SCANNING
 ----------------
 For channel scan's a modified version of the wirbelscan plugin (Version dev-0.0.5-pre11e) is
